- Fix GSource leak when using wxIdleEvent::RequestMore() (#23364).
- Allow using libwebkit2gtk-4.1 and libsoup-3.0 (Scott Talbert, #23630).
- Support Numpad Enter for ending wxListCtrl editing (Scott Talbert, #23762).
- Improve dark mode detection (Colin Kinloch and Paul Cornett, #23764).
- Fix wxPreferencesEditor size under Wayland (#23924).

wxMSW:

- Fix (deprecated) build without Unicode support broken in 3.2.2 (#23516).
- Fix crash when using wxBitmapDataObject in wxDataObjectComposite (#23564).
- Fix setting locale for wxLANGUAGE_UKRAINIAN (Ulrich Telle, #23210).
- Don't reset custom wxToolBar background on system colour change (#23386).
- Fix wxUILocale::GetPreferredUILanguages() with OS < 10 (Brian Nixon, #23416).
- Fix building with LLVM clang (Sergey Khalyutn, Maarten Bent, #23464).
- Fix discrepancy between GDI and Direct2D in high DPI (Kumazuma, #23486).
- Fix wxTreeCtrl::ScrollTo() with hidden root item (#23534).
- Fix hang in wxFileDialog if COINIT_MULTITHREADED was used (#23578).
- Fix handling of RLE-compressed bitmaps (Brian Nixon, #23573).
- Fix wxWindow::GetTextExtent() with given font in high DPI (#23542).
- Fix drawing owner-drawn menu items with bitmaps (Jacob Gillespie, #23230).
- Improve ScrollTo() with wxDV_VARIABLE_LINE_HEIGHT (Jens Göpfert, #23102).
- Fix libraries names in Arch64 CMake build (Tobias Taschner, #23347).
- Fix using wxComboCtrl with AUI floating pane as parent (#23399).
- Fix wrong wxWindowsPrintNativeData initialization (Stefan Ziegler, #23685).
- Fix position of wxStaticBox label after DPI change (Maarten Bent, #23740).
- Fix background colour of empty cells in wxDataViewCtrl (#23708).

wxOSX:

- Fix missing key events for ⌘+⎇+Letter combinations (#23671).
- Add support for wxDP_DROPDOWN under macOS 10.15.4+ (Lauri Nurmi, #23520).
- Fix initial width of empty wxTextCtrl (#23295).
- Fix underlined fonts sometimes appearing without underline (#23264).
- Respect composition mode when drawing bitmaps (#23240).