@@ -13,6 +13,8 @@
 
 #include "wx/radiobut.h"
 
+#include "wx/hashmap.h"
+
 #include "wx/gtk/private.h"
 
 //-----------------------------------------------------------------------------
@@ -20,6 +22,17 @@
 //-----------------------------------------------------------------------------
 
 extern bool           g_blockEventsOnDrag;
+
+namespace
+{
+
+WX_DECLARE_VOIDPTR_HASH_MAP(GtkWidget*, wxRadioButtonHashMap);
+
+// This map contains the hidden GtkRadioButtons created for wxRadioButtons with
+// wxRB_SINGLE style in order to allow unchecking them.
+wxRadioButtonHashMap gs_hiddenButtons;
+
+} // anonymous namespace
 
 //-----------------------------------------------------------------------------
 // "clicked"
@@ -92,7 +105,23 @@ bool wxRadioButton::Create( wxWindow *parent,
         }
     }
 
-    m_widget = gtk_radio_button_new_with_label( radioButtonGroup, wxGTK_CONV( label ) );
+    // GTK does not allow a radio button to be inactive if it is the only radio
+    // button in its group, so we need to work around this by creating a second
+    // hidden radio button.
+    if (HasFlag(wxRB_SINGLE))
+    {
+        GtkWidget* const hiddenButton = gtk_radio_button_new( NULL );
+        gs_hiddenButtons[this] = hiddenButton;
+        m_widget = gtk_radio_button_new_with_label_from_widget( GTK_RADIO_BUTTON(hiddenButton), label.utf8_str() );
+        // Since this is the second button in the group, we need to ensure it
+        // is active by default and not the first hidden one.
+        gtk_toggle_button_set_active( GTK_TOGGLE_BUTTON(m_widget), TRUE );
+    }
+    else
+    {
+        m_widget = gtk_radio_button_new_with_label( radioButtonGroup, label.utf8_str() );
+    }
+
     g_object_ref(m_widget);
 
     SetLabel(label);
@@ -105,6 +134,11 @@ bool wxRadioButton::Create( wxWindow *parent,
     PostCreation(size);
 
     return true;
+}
+
+wxRadioButton::~wxRadioButton()
+{
+    gs_hiddenButtons.erase(this);
 }
 
 void wxRadioButton::SetLabel( const wxString& label )
@@ -133,9 +167,12 @@ void wxRadioButton::SetValue( bool val )
     }
     else
     {
-        // should give an assert
-        // RL - No it shouldn't.  A wxGenericValidator might try to set it
-        //      as FALSE.  Failing silently is probably TRTTD here.
+        // Normal radio buttons can only be turned off by turning on another
+        // button in the same group, but the single ones can be turned off
+        // manually, which is implemented by turning a hidden button on, as
+        // it's the only way to do it with GTK.
+        if (HasFlag(wxRB_SINGLE))
+            gtk_toggle_button_set_active( GTK_TOGGLE_BUTTON(gs_hiddenButtons[this]), TRUE );
     }
 
     g_signal_handlers_unblock_by_func(
