@@ -301,6 +301,7 @@ wxGTK:
 - Support Numpad Enter for ending wxListCtrl editing (Scott Talbert, #23762).
 - Improve dark mode detection (Colin Kinloch and Paul Cornett, #23764).
 - Fix wxPreferencesEditor size under Wayland (#23924).
+- Make wxRB_SINGLE really work (Stefan Hansson, #23652).
 
 wxMSW:
 
